--- a/apps/cinemapedia-angular/src/app/app.component.html
+++ b/apps/cinemapedia-angular/src/app/app.component.html
@@ -1,2 +1,11 @@
-<app-nx-welcome></app-nx-welcome>
-<router-outlet></router-outlet>
+<div class="relative min-h-screen">
+  <!-- navbar -->
+  <main>
+    <!-- <app-hero /> -->
+    <div class="pb-20">
+      <router-outlet />
+    </div>
+  </main>
+
+  <!-- TODO add button go -->
+</div>
