--- a/apps/cinemapedia-angular/src/app/features/movies/movies.component.html
+++ b/apps/cinemapedia-angular/src/app/features/movies/movies.component.html
@@ -1,4 +1,9 @@
-<p>movies works!</p>
-<pre>
-    {{ movies() | json }}
-</pre>
+<div
+  class="grid grid-col-2 gap-4 px-4 mx-auto mt-6 max-w-7xl md:grid-cols-4 lg:grid-cols-6"
+>
+  @for (movie of movies(); track $index) {
+  <a [routerLink]="['/movies', movie.id]" class="">
+    <app-movie-card [movie]="movie" class="w-full" />
+  </a>
+  }
+</div>
