hero component movie random

--- a/apps/cinemapedia-angular/src/app/app.component.html
+++ b/apps/cinemapedia-angular/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="relative min-h-screen">
   <!-- navbar -->
   <main>
-    <!-- <app-hero /> -->
+    <app-hero [movie]="heroMovie()!" />
     <div class="pb-20">
       <router-outlet />
     </div>
