--- a/apps/cinemapedia-angular/src/app/app.component.html
+++ b/apps/cinemapedia-angular/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="relative min-h-screen">
-  <!-- navbar -->
+  <app-navbar />
   <main>
     <app-hero [movie]="heroMovie()!" />
     <div class="pb-20">
