Trabajando en el search reactivo

--- a/apps/cinemapedia-angular/src/app/layout/navbar/navbar.component.html
+++ b/apps/cinemapedia-angular/src/app/layout/navbar/navbar.component.html
@@ -33,6 +33,7 @@
       <div class="flex items-center space-x-4">
         <div class="relative">
           <!-- TODO SEARCH COMPONENT -->
+          <app-search></app-search>
         </div>
       </div>
     </div>
