Trabajando en MovieDetails y Add buttons Hero

--- a/apps/cinemapedia-angular/src/app/layout/hero/hero.component.html
+++ b/apps/cinemapedia-angular/src/app/layout/hero/hero.component.html
@@ -18,6 +18,19 @@
         {{ movieData.title }}
       </h1>
       <p class="mb-8 text-lg text-white">{{ movieData.overview }}</p>
+
+      <div class="flex space-x-4">
+        <button
+          class="px-8 py-2 text-black bg-white rounded-lg hover:bg-white/90"
+        >
+          Watch
+        </button>
+        <button
+          class="px-8 py-2 text-black bg-white rounded-lg hover:bg-white/90"
+        >
+          ℹ️ More Info
+        </button>
+      </div>
     </div>
   </div>
 </div>
