--- a/apps/cinemapedia-angular/src/app/layout/hero/hero.component.html
+++ b/apps/cinemapedia-angular/src/app/layout/hero/hero.component.html
@@ -23,7 +23,7 @@
         <button
           class="px-8 py-2 text-black bg-white rounded-lg hover:bg-white/90"
         >
-          Watch
+          ▶️ Watch
         </button>
         <button
           class="px-8 py-2 text-black bg-white rounded-lg hover:bg-white/90"
