--- a/apps/cinemapedia-angular/src/app/features/movies/movie-card/movie-card.component.html
+++ b/apps/cinemapedia-angular/src/app/features/movies/movie-card/movie-card.component.html
@@ -1,8 +1,9 @@
-<div class="cursor-pointer" role="button">
+<div class="cursor-pointer movie-card" role="button">
   <img
     [src]="getImageUrl()"
     [alt]="movie().title"
     (error)="setImageError(true)"
+    class="aspect-[2/3]"
   />
   <div class="movie-card-overlay">
     <div class="movie-card-content">
