--- a/apps/cinemapedia-angular/src/app/features/movies/movie-details/movie-details.component.html
+++ b/apps/cinemapedia-angular/src/app/features/movies/movie-details/movie-details.component.html
@@ -1,6 +1,5 @@
 <div class="min-h-screen p-4 md:p-8">
   <div class="max-w-4xl mx-auto mt-12">
-    <!-- TODO movie has value -->
     <button
       (click)="goBack()"
       class="flex items-center gap-2 mb-8 transition-color text-netflix-red hover:text-netflix-red-dark"
@@ -31,6 +30,10 @@
           </p>
         </div>
       </div>
+    </div>
+
+    <div class="">
+      <app-tabs />
     </div>
     }
   </div>
