--- a/apps/cinemapedia-angular/src/app/layout/hero/hero.component.html
+++ b/apps/cinemapedia-angular/src/app/layout/hero/hero.component.html
@@ -3,8 +3,8 @@
 <div class="relative h-[80vh] w-full">
   <div class="absolute inset-0">
     <img
-      src="https://image.tmdb.org/t/p/w500{{ movieData.backdrop_path }}"
-      [alt]="movieData.title"
+      [src]="getImgSrc(movieData?.backdrop_path)"
+      [alt]="movieData?.title"
       class="object-cover w-full h-full"
     />
     <div
@@ -15,9 +15,9 @@
   <div class="relative flex items-center h-full">
     <div class="w-full px-4 md:w-2/3 lg:w-1/2 xl:w-1/3">
       <h1 class="mb-4 text-3lg font-bold text-white md:text-5xl">
-        {{ movieData.title }}
+        {{ movieData?.title }}
       </h1>
-      <p class="mb-8 text-lg text-white">{{ movieData.overview }}</p>
+      <p class="mb-8 text-lg text-white">{{ movieData?.overview }}</p>
 
       <div class="flex space-x-4">
         <button
