--- a/apps/cinemapedia-angular/src/app/features/movies/movies.component.html
+++ b/apps/cinemapedia-angular/src/app/features/movies/movies.component.html
@@ -1,3 +1,6 @@
+<!-- TODO ADD DEFERRED LOADING -->
+<app-movie-row [movies]="trendingMovies()" title="Popular Movies" />
+
 <div
   class="grid grid-col-2 gap-4 px-4 mx-auto mt-6 max-w-7xl md:grid-cols-4 lg:grid-cols-6"
 >
